<resources>
    <string name="app_name">MuSeek</string>

    <string name="index_header">MuSeek</string>

    <string name="reg_button">Registrati</string>
    <string name="log_button">Login</string>
    <string name="logout_button">Logout</string>

    <string name="new_ad_button">Inserisci un Annuncio</string>
    <string name="home_button">Home</string>
    <string name="my_ads_button">I Miei Annunci</string>
    <string name="favs_button">Preferiti</string>

    <string name="instrument_button">Mercatino Musicale</string>
    <string name="band_button">Villaggio Band</string>

    <string name="registration_header">Registrazione</string>
    <string name="login_header">Accedi</string>

    <string name="firstname">Nome</string>
    <string name="lastname">Cognome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Conferma Password</string>

    <string name="search_hint">Cerca uno strumento&#8230;</string>

    <string name="winds_button">Fiati</string>
    <string name="strings_button">Cordofoni</string>
    <string name="keyboards_button">Tastiere</string>
    <string name="arches_button">Archi</string>

    <string name="photo_picker_button">Scegli\nuna\nFoto</string>
    <string name="brand_edit_text">Marca</string>
    <string name="model_edit_text">Modello</string>
    <string name="price_edit_text">Prezzo</string>
    <string name="euro_text_view">€</string>
    <string name="category_edit_text">Tipologia</string>
    <string name="date_edit_text">Data</string>
    <string name="hint_spinner">Tipologia di Strumento&#8230;</string>
    <string name="submit_button">Conferma</string>
    <string name="update_button">Aggiorna</string>
    <string name="photo_description">ad_photo</string>
    <string name="my_ads_text_view">I Miei Annunci</string>
    <string name="new_ad_text_view">Nuovo Annuncio</string>
    <string name="edit_button">Modifica</string>
    <string name="delete_button">Elimina</string>
    <string name="details_button">Visualizza</string>
    <string name="show_ads_text_view">Risultati Ricerca</string>
    <string name="ad_details_text_view">Dettagli Annuncio</string>
    <string name="user_ad_text_view">Inserito da</string>
    <string name="no_results_text_view">Siamo spiacenti, la ricerca non ha prodotto alcun risultato.</string>
    <string name="no_my_ads_text_view">Non hai annunci in vendita.</string>
    <string name="search_button">Cerca</string>
    <string name="my_profile_text_view">Il Mio Profilo</string>
    <string name="edit_profile_text_view">Modifica Profilo</string>
    <string name="phone">Telefono</string>
    <string name="update_profile_button">Aggiorna Profilo</string>
    <string name="edit_ad_text_view">Modifica Annuncio</string>
    <string name="loading_text_view">Solo un\nmomento...</string>
    <string name="museek_logo_description">Museek Logo</string>
    <string name="insert_password">Inserisci la password:</string>
    <string name="new_email">Nuova Email</string>
    <string name="edit_password_text_view">Modifica Password</string>
    <string name="edit_email_text_view">Modifica Email</string>
    <string name="condition_text_view">Condizioni Strumento</string>
    <string name="used_as_new">Usato - Come Nuovo</string>
    <string name="used_good">Usato - Buone Condizioni</string>
    <string name="used_discreet">Usato - Discrete Condizioni</string>
    <string name="new_condition">Nuovo</string>
    <string name="no_purchased_ads_text_view">Non hai ancora effettuato acquisti.</string>
    <string name="purchased_ads_text_view">Acquisti Passati</string>
    <string name="purchase_date_edit_text">Data Acquisto</string>
    <string name="seller_edit_text">Venditore</string>
    <string name="sold_ads_text_view">Le Mie Vendite</string>
    <string name="user_sold_ad_text_view">Acquistato da</string>
    <string name="address_sold_ad_text_view">Indirizzo Spedizione</string>
    <string name="notify_spedition_button">Notifica Spedizione</string>
    <string name="my_profile_instrument_text_view">Il Mio Mercatino</string>
    <string name="review_edit_text">Numero da 0 a 5</string>
    <string name="submit_review_button">Invia Recensione</string>
    <string name="my_profile_band_text_view">Il Mio Villaggio</string>
    <string name="band_name_edit_text">Nome Band</string>
    <string name="no_result_text_view_sold_ads">Non hai ancora venduto nessuno strumento.</string>
    <string name="no_my_ads_band_text_view">Non hai ancora annunci.</string>

</resources>