<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_dark"
    android:scrollbars="none"
    tools:context=".fragments.InstrumentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/navBar"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:background="@color/blue_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/newAdButtonInstr"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/grey_dark"
            android:fontFamily="@font/cormorant_upright_bold"
            android:text="@string/new_ad_button"
            android:textAllCaps="false"
            android:textColor="@color/blue_light"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/navBar"
            app:layout_constraintEnd_toEndOf="@+id/navBar"
            app:layout_constraintTop_toTopOf="@+id/navBar" />

        <Button
            android:id="@+id/homeButtonInstr"
            android:layout_width="160dp"
            android:layout_height="75dp"
            android:background="@drawable/shadow_button"
            android:fontFamily="@font/cormorant_upright_bold"
            android:text="@string/home_button"
            android:textAllCaps="true"
            android:textColor="@color/grey_dark"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/navBar"
            app:layout_constraintStart_toStartOf="@+id/navBar"
            app:layout_constraintTop_toTopOf="@+id/navBar" />


        <TableRow
            android:id="@+id/tableRow"
            style="@android:style/Holo.ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/navBar">

            <Button
                android:id="@+id/myAdsButtonInstr"
                style="@android:style/ButtonBar"
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:layout_marginTop="0dp"
                android:layout_weight="2"
                android:background="@drawable/shadow_button"
                android:fontFamily="@font/cormorant_upright_bold"
                android:shadowColor="#FFFFFF"
                android:shadowDx="1"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:text="@string/my_ads_button"
                android:textAllCaps="true"
                android:textColor="@color/blue_light"
                android:textSize="23sp" />

            <Button
                android:id="@+id/favsButtonInstr"
                style="@android:style/ButtonBar"
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:layout_marginTop="0dp"
                android:layout_weight="2"
                android:background="@drawable/shadow_button"
                android:fontFamily="@font/cormorant_upright_bold"
                android:shadowColor="#FFFFFF"
                android:shadowDx="1"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:text="@string/favs_button"
                android:textAllCaps="true"
                android:textColor="@color/blue_light"
                android:textSize="23sp" />
        </TableRow>

        <SearchView
            android:id="@+id/searchViewInstr"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="50dp"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_hint"
            android:theme="@style/AppSearchView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableRow"
            app:layout_constraintVertical_bias="0.0" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchViewInstr">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2">

                <Button
                    android:id="@+id/catWindsButtonInstr"
                    style="@android:style/ButtonBar"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="0dp"
                    android:layout_weight="2"
                    android:background="@drawable/shadow_button_blue_light"
                    android:fontFamily="@font/cormorant_upright_bold"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="5"
                    android:text="@string/winds_button"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/catStringsButtonInstr"
                    style="@android:style/ButtonBar"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="0dp"
                    android:layout_weight="2"
                    android:background="@drawable/shadow_button_blue_light"
                    android:fontFamily="@font/cormorant_upright_bold"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="5"
                    android:text="@string/strings_button"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2">

                <Button
                    android:id="@+id/catKeyboardsButtonInstr"
                    style="@android:style/ButtonBar"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="0dp"
                    android:layout_weight="2"
                    android:background="@drawable/shadow_button_blue_light"
                    android:fontFamily="@font/cormorant_upright_bold"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="5"
                    android:text="@string/keyboards_button"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/catArchesButtonInstr"
                    style="@android:style/ButtonBar"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="0dp"
                    android:layout_weight="2"
                    android:background="@drawable/shadow_button_blue_light"
                    android:fontFamily="@font/cormorant_upright_bold"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="5"
                    android:text="@string/arches_button"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>