<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark"
    android:scrollbars="vertical"
    tools:context=".RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/headerTextViewReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/cormorant_upright_bold"
            android:shadowColor="#000000"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="2"
            android:text="@string/registration_header"
            android:textAlignment="center"
            android:textColor="@color/blue_light"
            android:textScaleX="1.15"
            android:textSize="55sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/firstnameEditTextReg"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:background="@drawable/border_edit_text_blue_light"
            android:ems="10"
            android:fontFamily="@font/cormorant_upright_bold"
            android:hint="@string/firstname"
            android:includeFontPadding="true"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/blue_dark"
            android:textScaleX="1.1"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerTextViewReg" />

        <EditText
            android:id="@+id/lastnameEditTextReg"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/border_edit_text_blue_light"
            android:ems="10"
            android:fontFamily="@font/cormorant_upright_bold"
            android:hint="@string/lastname"
            android:includeFontPadding="true"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/blue_dark"
            android:textScaleX="1.1"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstnameEditTextReg" />

        <EditText
            android:id="@+id/emailEditTextReg"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/border_edit_text_blue_light"
            android:ems="10"
            android:fontFamily="@font/cormorant_upright_bold"
            android:hint="@string/email"
            android:includeFontPadding="true"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/blue_dark"
            android:textScaleX="1.1"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastnameEditTextReg" />

        <EditText
            android:id="@+id/passwordEditTextReg"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_edit_text_blue_light"
            android:ems="10"
            android:fontFamily="@font/cormorant_upright_bold"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:includeFontPadding="true"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/blue_dark"
            android:textScaleX="1.1"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditTextReg" />

        <EditText
            android:id="@+id/passwordconfirmEditTextReg"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_edit_text_blue_light"
            android:ems="10"
            android:fontFamily="@font/cormorant_upright_bold"
            android:hint="@string/password_confirm"
            android:importantForAutofill="no"
            android:includeFontPadding="true"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/blue_dark"
            android:textScaleX="1.1"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditTextReg" />

        <Button
            android:id="@+id/regButtonReg"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/border_button_blue_light"
            android:elevation="5dp"
            android:fontFamily="@font/cormorant_upright_bold"
            android:hapticFeedbackEnabled="true"
            android:text="@string/reg_button"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordconfirmEditTextReg"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>