<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:scrollbars="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="140dp"
            android:contentDescription="@string/museek_logo_description"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/regButtonIndex"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="130dp"
            android:background="@drawable/border_button_blue_light"
            android:fontFamily="@font/boogaloo"
            android:hapticFeedbackEnabled="true"
            android:text="@string/reg_button"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/logButtonIndex"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/border_button_red_light"
            android:fontFamily="@font/boogaloo"
            android:hapticFeedbackEnabled="true"
            android:text="@string/log_button"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regButtonIndex"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>