<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_dark"
    android:scrollbars="vertical"
    tools:context=".activities.HomepageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/instrumentButton"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shadow_button"
            android:fontFamily="@font/cormorant_upright_bold"
            android:shadowColor="#000000"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="5"
            android:text="@string/instrument_button"
            android:textColor="@color/blue_light"
            android:textSize="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bandButton"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/shadow_button"
            android:fontFamily="@font/cormorant_upright_bold"
            android:shadowColor="#000000"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="5"
            android:text="@string/band_button"
            android:textColor="@color/red_light"
            android:textSize="75sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instrumentButton" />

        <Button
            android:id="@+id/logoutButtonHome"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp"
            android:background="@color/grey_light"
            android:elevation="5dp"
            android:fontFamily="@font/belgrano"
            android:hapticFeedbackEnabled="true"
            android:text="@string/logout_button"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bandButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>